Libbson-1.3.0-beta0
===================

It is my pleasure to announce to you the beta release of Libbson-1.3.0.

Changes since the previous stable release, 1.2.1:

  * Fix potential crash in bson_strncpy on Windows.
  * Fix compiler warnings and errors, especially with Visual Studio 2015
    and IBM XL C.
  * Combine environment's CFLAGS with configure options when building.

Thanks to everyone who contributed to the development of this release.

  * Hannes Magnusson
  * A. Jesse Jiryu Davis
  * Jeroen Ooms
  * Petr Písař
  * xpol

Peace,

  A. Jesse Jiryu Davis


Libbson-1.2.1
=============

It is my pleasure to announce to you the release of Libbson-1.2.1.

Changes since the previous stable release, 1.2.0 are solely in the content
and format of documentation.

Peace,

  A. Jesse Jiryu Davis


Libbson-1.2.0
=============

It is my pleasure to announce to you the release of Libbson-1.2.0.

Changes since the previous stable release, 1.1.11:

  * Add bson_mem_restore_vtable(), the inverse of bson_mem_set_vtable().
  * Enable runtime asserts in release build.
  * Fixed compiler warnings and build failures on various platforms.
  * Improvements to the formatting and contents of the documentation.

Thanks to everyone who contributed to the development of this release.

  * A. Jesse Jiryu Davis
  * Hannes Magnusson
  * Jason Carey
  * Kyle Suarez
  * Derick Rethans
  * David Hatch

Peace,

  A. Jesse Jiryu Davis


Libbson 1.2.0-rc0
==================

It is my pleasure to announce to you the release candidate of Libbson-1.2.0.

Changes:

  * Merge changes from 1.1.11.
  * Enable runtime asserts in release build.

Thanks to everyone who contributed to the development of this release candidate.

  * A. Jesse Jiryu Davis
  * Hannes Magnusson
  * Kyle Suarez
  * Jason Carey

-- A. Jesse Jiryu Davis


Libbson 1.2.0-beta
==================

It is my pleasure to announce to you the beta of Libbson-1.2.0.
