@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.8)
 
 project (libbson)
 
+option(ENABLE_TESTS "Build libbson tests." ON)
+
 include(CheckFunctionExists)
 include(CheckIncludeFile)
 include(CheckStructHasMember)
@@ -207,36 +209,38 @@ else()
     target_link_libraries (bson_static ws2_32)
 endif()
 
-enable_testing()
+if (ENABLE_TESTS)
+    enable_testing()
 
-add_executable(test-libbson
-   ${SOURCE_DIR}/tests/TestSuite.c
-   ${SOURCE_DIR}/tests/TestSuite.h
-   ${SOURCE_DIR}/tests/test-libbson.c
-   ${SOURCE_DIR}/tests/test-atomic.c
-   ${SOURCE_DIR}/tests/test-bson.c
-   ${SOURCE_DIR}/tests/test-endian.c
-   ${SOURCE_DIR}/tests/test-clock.c
-   ${SOURCE_DIR}/tests/test-error.c
-   ${SOURCE_DIR}/tests/test-iso8601.c
-   ${SOURCE_DIR}/tests/test-iter.c
-   ${SOURCE_DIR}/tests/test-json.c
-   ${SOURCE_DIR}/tests/test-oid.c
-   ${SOURCE_DIR}/tests/test-reader.c
-   ${SOURCE_DIR}/tests/test-string.c
-   ${SOURCE_DIR}/tests/test-utf8.c
-   ${SOURCE_DIR}/tests/test-value.c
-   ${SOURCE_DIR}/tests/test-version.c
-   ${SOURCE_DIR}/tests/test-writer.c
-   ${SOURCE_DIR}/tests/test-bcon-basic.c
-   ${SOURCE_DIR}/tests/test-bcon-extract.c
-)
+    add_executable(test-libbson
+       ${SOURCE_DIR}/tests/TestSuite.c
+       ${SOURCE_DIR}/tests/TestSuite.h
+       ${SOURCE_DIR}/tests/test-libbson.c
+       ${SOURCE_DIR}/tests/test-atomic.c
+       ${SOURCE_DIR}/tests/test-bson.c
+       ${SOURCE_DIR}/tests/test-endian.c
+       ${SOURCE_DIR}/tests/test-clock.c
+       ${SOURCE_DIR}/tests/test-error.c
+       ${SOURCE_DIR}/tests/test-iso8601.c
+       ${SOURCE_DIR}/tests/test-iter.c
+       ${SOURCE_DIR}/tests/test-json.c
+       ${SOURCE_DIR}/tests/test-oid.c
+       ${SOURCE_DIR}/tests/test-reader.c
+       ${SOURCE_DIR}/tests/test-string.c
+       ${SOURCE_DIR}/tests/test-utf8.c
+       ${SOURCE_DIR}/tests/test-value.c
+       ${SOURCE_DIR}/tests/test-version.c
+       ${SOURCE_DIR}/tests/test-writer.c
+       ${SOURCE_DIR}/tests/test-bcon-basic.c
+       ${SOURCE_DIR}/tests/test-bcon-extract.c
+    )
 
-target_link_libraries(test-libbson bson_static)
-add_test(NAME test-libbson COMMAND test-libbson)
+    target_link_libraries(test-libbson bson_static)
+    add_test(NAME test-libbson COMMAND test-libbson)
 
-file(COPY ${SOURCE_DIR}/tests/binary ${SOURCE_DIR}/tests/json
-     DESTINATION ${PROJECT_BINARY_DIR}/tests)
+    file(COPY ${SOURCE_DIR}/tests/binary ${SOURCE_DIR}/tests/json
+         DESTINATION ${PROJECT_BINARY_DIR}/tests)
+endif ()  # ENABLE_TESTS
 
 install(
   TARGETS bson_shared bson_static
