@@ -1,3 +1,8 @@
+Libbson-1.3.0-rc0
+=================
+
+  * CMake option to disable building tests: "cmake -DENABLE_TESTS:BOOL=OFF"
+
 Libbson-1.3.0-beta0
 ===================
 
